Bug 444739 - startup and occasional freezes from plasma default applets
Summary: startup and occasional freezes from plasma default applets
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.10.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-31 20:14 UTC by Michail Vourlakos
Modified: 2021-11-14 11:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michail Vourlakos 2021-10-31 20:14:12 UTC
SUMMARY
There are applets that can create freezes during latte startup or during its operation. This is an effort to track the down and eventually to conclude what is the fault.

APPLETS
org.kde.plasma.clipboard
------
can create startup freezes for latte and there is even a workaround for it:
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/865

org.kde.plasma.printmanager
-----
with Plasma 5.23.2  there are layouts that can create startup freezes


----------------------
If someone wants to disable such freezes it should remove totally these applets from its latte docks/panels and also disable them in its systrays. Right click your systray -> Configure systray... -> Entries -> Visibility: Disabled
Comment 1 Michail Vourlakos 2021-11-14 11:43:59 UTC
Git commit 912f2f1cfa26276ed08e9527bc25b70591f29256 by Michail Vourlakos.
Committed on 14/11/2021 at 11:39.
Pushed by mvourlakos into branch 'v0.10'.

plasmadesk:fix startup freezes from QDbusInterface

--as it appears plasma applets were not the main faulter
to blame for startup freezes. The bug was that Latte
was trying to communicate with Plasma DBus interface
to inform it about docks/panels geometries. For some
reason during startup other applets could also were
trying the same and for that reason Qt provides a 25sec
forced delay in case there are too many such calls.
The new approach does not block the startup code at all
and it should work at all cases.
FIXED-IN:0.10.4

M  +59   -27   app/plasma/extended/screengeometries.cpp
M  +2    -0    app/plasma/extended/screengeometries.h

https://invent.kde.org/plasma/latte-dock/commit/912f2f1cfa26276ed08e9527bc25b70591f29256
Comment 2 Michail Vourlakos 2021-11-14 11:44:31 UTC
Git commit b3efb73aefb7fbe0c2f7f91dacf74769a121ebed by Michail Vourlakos.
Committed on 14/11/2021 at 11:44.
Pushed by mvourlakos into branch 'master'.

plasmadesk:fix startup freezes from QDbusInterface

--as it appears plasma applets were not the main faulter
to blame for startup freezes. The bug was that Latte
was trying to communicate with Plasma DBus interface
to inform it about docks/panels geometries. For some
reason during startup other applets could also were
trying the same and for that reason Qt provides a 25sec
forced delay in case there are too many such calls.
The new approach does not block the startup code at all
and it should work at all cases.
FIXED-IN:0.10.4

M  +59   -27   app/plasma/extended/screengeometries.cpp
M  +2    -0    app/plasma/extended/screengeometries.h

https://invent.kde.org/plasma/latte-dock/commit/b3efb73aefb7fbe0c2f7f91dacf74769a121ebed